fix li overflow

--- a/app/less/product-overview.less
+++ b/app/less/product-overview.less
@@ -4,7 +4,7 @@
     .content-name {
         .Component-content-name();
 
-        margin: 65px 0 90px;
+        margin: 60px 0 90px;
     }
 
     .group-info {
@@ -20,6 +20,8 @@
         }
 
         li {
+            padding-top: 5px;
+
             &:not(:nth-child(4)) {
                 margin-right: 70px;
             }
